# stryke-email

./: Cargo.toml  Makefile  README.md  stryke.toml
.github/workflows/: ci.yml  release.yml
docs/: index.html  report.html
lib/: Email.stk
src/: lib.rs
t/: test_email.stk  test_stryke_email_surface.stk
tests/: surface.rs
