[package]
name = "stryke-email"
version = "0.1.0"
edition = "2021"
description = "Email / campaign cdylib for the stryke `email` package — SMTP send, mass mailing, templates, unsubscribe + suppression. dlopened in-process via stryke's FFI bridge"
authors = ["MenkeTechnologies"]
license = "MIT"
repository = "https://github.com/MenkeTechnologies/stryke-email"
homepage = "https://menketechnologies.github.io/stryke-email/"
publish = false

[lib]
name = "stryke_email"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# Blocking SMTP transport with a built-in connection pool, rustls TLS — no
# tokio, no OpenSSL. Matches the sync connection-cache model the other stryke
# data packages use.
lettre = { version = "0.11", default-features = false, features = [
    "builder",
    "smtp-transport",
    "pool",
    "hostname",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
once_cell = "1"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
